package com.dah.enums;

public enum Category {
  FULL_PAPER,
  SHORT_PAPER,
  DEMO;
}
