package com.dah.enums;

public enum ReviewStatus {
   ASSIGNED,
   SUBMITTED;
}
