package com.dah.enums;

public enum Role {
  RESEARCHER,
  COORDINATOR;
}
