package com.dah.enums;

public enum Verdict {
  REJECTED,
  WEAK_REJECT,
  WEAK_ACCEPTED,
  ACCEPTED;
}
